Implemented initial directory; Changed welcome file; Minor configuration changes